<resources>
    <string name="app_name" translatable="false">Cogitare</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nome_completo">Full name:</string>
    <string name="sexo_paciente">Gender:</string>
    <string name="data_de_nascimento">Date of birth:</string>
    <string name="idade">Age:</string>
    <string name="numero_prontuario">Record number:</string>
    <string name="unidade_internacao">Inpatient unit:</string>
    <string name="title_unidade_internacao">Select the inpatient unit:</string>
    <string name="cadastrar">Save</string>
    <string name="adicionar">Add</string>
    <string name="sexo_masculino">Male</string>
    <string name="sexo_feminino">Female</string>
    <string name="limpar_campos">Clear fields</string>
    <string name="toast_limpar_campos">Successfully cleared fields!</string>
    <string name="toast_erro_cadastro">Make sure the fields are filled in correctly.</string>
    <string name="termos_privacidade">When registering a patient, you must agree to the privacy terms.</string>
    <string name="int_geral">General Hospitalization</string>
    <string name="int_pediatrica">Pediatric Hospitalization</string>
    <string name="int_transmissiveis">Hospitalization for Communicable Diseases</string>
    <string name="int_mentais">Acute Mental Illness Admission</string>
    <string name="int_tuberculose">Hospitalization for Tuberculosis, Acute Form</string>
    <string name="int_bercario">Nursery</string>
    <string name="int_intensivo">Intensive Treatment</string>
    <string name="int_emergencia">Emergency</string>
    <string name="int_cirurgico">Surgical Center</string>
    <string name="int_obstetrico">Obstetric Center</string>
    <string name="int_lactario">Lactary</string>
    <string name="sobre">About</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="titulo_cadastro">Patient registration</string>
    <string name="titulo_alteracao">Edit patient</string>
    <string name="titulo_autoria">Application authors</string>
    <string name="titulo_lista_pacientes">Registered patients</string>
    <string name="texto_descricao_aplicativo">Auxiliary tool for Post Anesthesia Recovery (PAR) procedures by nursing professionals.</string>
    <string name="descricao_app">Application description.</string>
    <string name="especializacao_java">Java Specialization</string>
    <string name="dark_mode">Dark mode</string>
    <string name="settings">Settings</string>
    <string name="enable_dark_mode">Enable dark mode:</string>
    <string name="appearance">Appearance</string>
    <string name="confirmacao_deletar_paciente">You really want to delete the patient %s? This action cannot be undone.</string>
    <string name="confirma_acao">Confirmation</string>
    <string name="sim">YES</string>
    <string name="nao">NO</string>
    <string name="registros_paciente">Patient records</string>
    <string name="adicionar_registro">Add record</string>
    <string name="open_patient">Open patient</string>
    <string name="aviso_a_implementar">Implement: Space destined to the listView of the attendance reports registered in the patient\'s ID.</string>

</resources>